objects/Jason_s_Bikes__c.object
<CustomObject>
    <fields>
        <fullName>Bike_Description__c</fullName>
        <label>Bike Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trek</fullName>
                </value>
                <value>
                    <fullName>Canyon</fullName>
                </value>
                <value>
                    <fullName>Yeti</fullName>
                </value>
                <value>
                    <fullName>Santa Cruz</fullName>
                </value>
                <value>
                    <fullName>Davinci</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Service_Requested__c</fullName>
        <label>Type of Service Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jason&apos;s Bike</label>
    <nameField>
        <label>Jason&apos;s Bikes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jason&apos;s Bikes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>